--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -129,13 +129,13 @@ Once you have changed the edition, follow the instructions on this [requirements
 
 To install the app, follow these steps.
 
-1. In a terminal, log into your VTEX account by running the following:
+1. In a terminal, log into your VTEX account by running the following. Replace `{accountName}` with your store account name, for example `vtex login store`.
 
     ```bash
     vtex login {accountName}
     ```
 
-    > ⚠️ Replace `{accountName}` with your store account name, for example `vtex login store`.
+    > ⚠️ The FastStore WebOps app only works in the production environment, so you must install it only in your account's master environment.
 
 2. Install the FastStore WebOps app by running the following command:
 
