--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -95,7 +95,7 @@ Based on the edition version, follow the instructions below.
 
 If your account is using the `vtex.edition-store@5.x` major, the VTEX Intelligent Search app is already included, and you need to integrate the app via VTEX Admin.
 
-To integrate the VTEX Intelligent Search, go to the VTEX Admin, access **Store Settings > Intelligent Search > Integrations** and click on `START INTEGRATION`.
+To integrate the VTEX Intelligent Search, go to the VTEX Admin, access **Store Settings > Intelligent Search > Integrations**, and click `START INTEGRATION`.
 
 </details>
 
@@ -129,7 +129,7 @@ Once you have changed the edition, follow the instructions on this [requirements
 
 To install the app, follow these steps.
 
-1. In a terminal, log into your VTEX account by running the following. Replace `{accountName}` with your store account name, for example `vtex login store`.
+1. In a terminal, log in to your VTEX account by running the following. Replace `{accountName}` with your store account name, for example `vtex login store`.
 
     ```bash
     vtex login {accountName}
