Update Headless CMS overview

--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -29,9 +29,10 @@ You must have the following [resources](https://help.vtex.com/en/tutorial/licens
 
 | **Product** | **Category** | **Resource** |
 | --------------- | ----------------- | ----------------- |
-| CMS | cms | **See CMS menu on the top-bar** |
-| CMS | cms | **Settings** |
-| CMS | GraphQL | **CMS GraphQL API** |
+| CMS | cms | See CMS menu on the top-bar |
+| CMS | cms | Settings |
+| CMS | GraphQL | CMS GraphQL API |
+| VTEX IO | Infrastructure | Vbase Read Write |
 
 To associate a role with the resources mentioned above, you can [create a custom role](https://help.vtex.com/en/tutorial/roles--7HKK5Uau2H6wxE1rH5oRbc#creating-a-role), add the resources to it, or add them to an existing role by editing it.
 
