fix: faststore typo

--- a/docs/faststore/docs/integrating-with-vtex-products/integrating-with-vtex-ad-network.mdx
+++ b/docs/faststore/docs/integrating-with-vtex-products/integrating-with-vtex-ad-network.mdx
@@ -10,7 +10,7 @@ FastStore stores can display sponsored products through the [VTEX Ad Network](ht
 
 ### Update the `@faststore/cli` package
 
-Update your store FastStore package to `v3.0.117` using `@faststore/cli`. To update the package, see the [Updating the`@fastore/cli` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version) for further details.
+Update your store FastStore package to `v3.0.117` using `@faststore/cli`. To update the package, see the [Updating the`@faststore/cli` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version) for further details.
 
 ### Create a campaign 
 
