fix: faststore typo

--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -17,7 +17,7 @@ These features help manage the content structure and ensure store sections are u
 
 ### Update the `@faststore/core` package version
 
-Make sure you have `@faststore/core` version `3.0.18` or greater to benefit from this feature. If you don't have the updated package, follow the instructions in [Updating the `@fastore/core` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-core-package-version).
+Make sure you have `@faststore/core` version `3.0.18` or greater to benefit from this feature. If you don't have the updated package, follow the instructions in [Updating the `@faststore/core` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-core-package-version).
 
 ### Set Headless CMS
 
