--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -18,7 +18,7 @@ Before implementing Preact, take the following considerations:
 
 ### Update `@faststore/cli` package
 
-Make sure the `@faststore/cli` package from your project is updated to the latest version. To do so, follow the instructions in [Updating the '@fastore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
+Make sure the `@faststore/cli` package from your project is updated to the latest version. To do so, follow the instructions in [Updating the '@faststore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
 
 ### Understand the experimental nature of Preact
 
