--- a/docs/faststore/docs/api-extensions/best-practices.mdx
+++ b/docs/faststore/docs/api-extensions/best-practices.mdx
@@ -14,7 +14,7 @@ In this guide, learn to configure API extensions, ensuring the following:
  
 ## Before you begin
 
-Make sure your store version is updated to v3.0.0 or above.  If it’s not updated, refer to the [Updating your `@fastore/core` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-core-package-version) section. 
+Make sure your store version is updated to v3.0.0 or above.  If it’s not updated, refer to the [Updating your `@faststore/core` package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-core-package-version) section. 
 
 ## Updating the `gql` helper usage
 
