--- a/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
+++ b/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
@@ -3,7 +3,7 @@ title: "2. Setting up the Headless CMS"
 sidebar_label: "Integrating your storefront with Headless CMS"
 ---
 
-Now that you are familiar with the core concepts of the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) and have set it up in your VTEX account let's get back to our **FastStore** project to define our own **Content Types** and **Sections**.
+Now that you are familiar with the core concepts of the [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) and have set it up in your VTEX account, let's get back to our **FastStore** project to define our own **Content Types** and **Sections**.
 
 By the end of this part of this tutorial, you will be able to see your first definition of a content type available for use in the Headless CMS app. Next, we will dive deeper into how to create these definitions in a smoother way.
 
@@ -15,7 +15,7 @@ By the end of this part of this tutorial, you will be able to see your first def
 
 ### Integrate the store with the Headless CMS
 
-To add and manage sections on your store's pages, all sections must be available in the Headless CMS. To integrate your FastStore project, please refer to the [Headless CMS integration track](https://developers.vtex.com/docs/guides/faststore/headless-cms-1-configuring-the-vtex-account).
+To add and manage sections on your store's pages, all sections must be available in the Headless CMS. To integrate your FastStore project, please refer to the [Headless CMS integration track](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview).
 
 ### Install the FastStore CLI
 
