fix: FastStore links

--- a/docs/faststore/docs/api-extensions/extending-api-schema.mdx
+++ b/docs/faststore/docs/api-extensions/extending-api-schema.mdx
@@ -75,7 +75,7 @@ Once you have created the necessary folders, you will have a folder structure fo
 
 Your new type definitions set the data structure for your new fields, extended from the existing FastStore API GraphQL queries and types.
 
-1. Create a new `<typeName>.graphql` file inside the `vtex/typeDefs` folder. For example, if we extend the [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct) type from the FastStore API, the name of the file should be `product.graphql`.
+1. Create a new `<typeName>.graphql` file inside the `vtex/typeDefs` folder. For example, if we extend the [StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct) type from the FastStore API, the name of the file should be `product.graphql`.
 
    > ℹ️ The organization inside the `vtex/typeDefs` folder is flexible. You can create multiple typeDefs files or group them all together in one file.
    > During the build process and when running the local server file, all `.graphql` files under this directory will be considered.
@@ -99,7 +99,7 @@ Refer to the next step to create the resolvers to provide the actual data to the
 
 Now, you'll create a resolver to define how the new `customData` field should be resolved, specifically what data or logic should be associated with it when queried.
 
-1.  Create a new `<resolver>.ts` file inside the `vtex/resolvers` folder. Let's continue using the [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct) type
+1.  Create a new `<resolver>.ts` file inside the `vtex/resolvers` folder. Let's continue using the [StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct) type
     example. That means the name of the file will be `product.ts`.
 
         > ℹ️ The organization inside this folder is flexible. You can create multiple resolver files or group them all together in one file.
