--- a/docs/faststore/docs/api-extensions/overview.mdx
+++ b/docs/faststore/docs/api-extensions/overview.mdx
@@ -43,7 +43,7 @@ This also means that you must be mindful of the data added to your query with [G
 
 Do not make direct requests to external APIs to avoid compromising website performance and `504` timeout errors. Instead, use the FastStore [API extension](https://developers.vtex.com/docs/guides/faststore/api-extensions-extending-api-schema) to access other data not available in the native FastStore API schema.
 
-If you need data that is not available on the native FastStore GraphQL schema, check the [root object](https://v1.faststore.dev/reference/api/objects).
+If you need data that is not available on the native FastStore GraphQL schema, check the [root object](https://developers.vtex.com/docs/guides/faststore/schema-objects).
 The [GraphQL root object](https://graphql.org/learn/execution/#root-fields-resolvers) represents the top-level object returned to a query. You can see the data that is available in the root object by adding logs.
 
 
