--- a/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
+++ b/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
@@ -2,15 +2,15 @@
 title: "Managing lazy loading sections on Product Listing Pages (PLPs)"
 ---
 
-By default, FastStore improves performance by wrapping store sections in `LazyLoadingSection` and ViewportObserver` components. These components delay loading non-essential sections until they are needed, such as when a user scrolls near them. This approach reduces initial page load times and improves user experience, particularly on slower networks or devices.
+By default, FastStore improves performance by wrapping store sections in `LazyLoadingSection` and `ViewportObserver` components. These components delay loading non-essential sections until needed, such as when a user scrolls near them. This approach reduces initial page load times and improves user experience, particularly on slower networks or devices.
 
-While lazy loading improves performance, it can harm SEO. Search engine crawlers often do not execute JavaScript or wait for dynamically loaded content. As a result, critical sections like product grids or category pages may not be indexed. For instance, if a user searches for "gym clothes," your product listings might not appear in search results if they are not included in the initial HTML.
+While lazy loading improves performance, it can harm SEO. Search engine crawlers often do not execute JavaScript or wait for dynamically loaded content. As a result, critical sections like product grids on category pages may not be indexed. For instance, if a user accesses the "gym clothes" collection, its product listing might not appear in search results if it's not included in the initial HTML.
 
 In this guide, learn how to optimize SEO by controlling lazy loading for sections in FastStore.
 
 ## Before you begin
 
-Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions on [Updating the '@fastore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version)
+Make sure the `@faststore/cli` package is updated to the latest version. If you need to update it, follow the instructions on [Updating the '@fastore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
 
 ## Instructions
 
@@ -30,7 +30,7 @@ Configure the title and description templates for product listing pages (PLP) in
    },
    ```
 
-   > ⚠ Change the values in `titleTemplate` and `descriptionTemplate` according to your collection’s name.
+   > ⚠ Change the values in `titleTemplate` and `descriptionTemplate` according to your needs. The `%s` should be used where you would like the collection name to appear. 
 
 ### Step 2: Controlling lazy loading for custom sections
 
@@ -61,7 +61,7 @@ By default, sections in FastStore are lazy-loaded for performance reasons. Howev
 
 ### Step 3: Accessing collection data in a custom section
 
-To display the collection name or other SEO-related data in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook in the section’s file:
+To display data related to the PLP in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook in the section’s file:
 
 ```CallToAction.tsx
 import { usePLP } from '@faststore/core'
@@ -88,7 +88,7 @@ export default function CustomCollectionName() {
 
 5. Click `Save` and publish the changes you made.
 6. Click `Preview`.
-7. Search for a collection name to see your new section. For example, if you have `Just arrived` collection added to the store slug, for example: `https://mystore.vtex.app/just-arrived`. You’ll be able to see something similar to the following:
+7. Search for a collection name to see your new section. For example, if you have a `Just arrived` collection, add its slug to the URL, for example: `https://mystore.vtex.app/just-arrived`. You’ll be able to see something similar to the following:
 
     ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
 
