--- a/docs/faststore/docs/sdk/overview.mdx
+++ b/docs/faststore/docs/sdk/overview.mdx
@@ -103,7 +103,7 @@ export default NewComponent
 
 </CH.Code>
 
-In the example above, if the cart is empty, it shows a message indicating that the cart is empty. However, if the cart contains items, it lists each item's name, price, and quantity.
+In the example, if the cart is empty, it shows a message indicating that the cart is empty. However, if the cart contains items, it lists each item's name, price, and quantity.
 
 </CH.Scrollycoding>
 
