Fix type and add link for FastStore SDK package

--- a/docs/faststore/docs/sdk/overview.mdx
+++ b/docs/faststore/docs/sdk/overview.mdx
@@ -40,7 +40,7 @@ The Analytics module helps you create a simple, extensive event system to feed y
 
 ## Getting started with the FastStore SDK
 
-Install @faststore/sdk as a dependency of your FastStore project via the command line:
+Install [`@faststore/sdk`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson) as a dependency of your FastStore project via the command line:
 
 <CH.Code>
 
