Add info about the Children section on the CMS track

--- a/docs/faststore/docs/headless-cms/3-adding-content-types-and-sections.mdx
+++ b/docs/faststore/docs/headless-cms/3-adding-content-types-and-sections.mdx
@@ -124,6 +124,13 @@ These components are referred to as **Sections**, and to create them,
 you can follow the instructions provided in the guide [Creating a new section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section). 
 The guide offers detailed information on the process of creating Sections and integrating them into the Headless CMS for easy editing and management.
 
+#### The Children section
+
+The Children section is a CMS-specific feature that separates store sections to organize and structure content within the Headless CMS interface. 
+While it is visible and configurable in the Headless CMS, it does not appear on the storefront. A use case for this section is on the context for global sections—available on all store pages—the Children section ensures headers and footers are clearly separated from other page content.
+
+![childre-section](https://vtexhelp.vtexassets.com/assets/docs/src/children-section___1c3e8b7d72e66c28eb59a3d9c0bafe10.png)
+
 #### The **`schema`** property
 
 The `schema` will always be unique for each of your Sections as they create the form that editors will use to submit data and change the content of a given React component.
